OMC v1.3.5 Alpha3 (Fixed Location/Weather Requests taking a long time to respond).